<resources>
    <string name="app_name">Music</string>
    <string name="main_toolbar_title">DANCE FAMILY</string>
    <string name="main_toolbar_subtitle">MUSIC</string>
    <string name="menu_toolbar_title">MENU</string>
    <string name="about_toolbar_title">INFO PAGE</string>
    <string name="playlist_toolbar_title">CRAZY DREAM</string>
    <string name="playlist_toolbar_subtitle">PLAYLIST</string>
    <string name="menu_share">Рассказать друзьям</string>
    <string name="menu_about">Dance Family</string>
    <string name="menu_save_audio">Сохраненные аудиозаписи</string>
    <string name="menu_star">Оценить приложение</string>
    <string name="menu_donate">Поддержать проект</string>
    <string name="menu_write">Написать разработчикам</string>
    <string name="snack_error_network">Нет соединения с Интернетом!</string>
    <string name="snack_repeat_on">Включен повтор песни</string>
    <string name="snack_repeat_off">Выключен повтор песни</string>
    <string name="snack_save">Песня добавлена в сохраненные</string>
    <string name="snack_unsave">Песня удалена из сохраненных</string>
    <string name="snack_have_not_saved_songs">Нет сохраненных песен</string>
    <string name="info_page_bv">BLACK VELVET</string>
    <string name="info_page_bv_since">Since 2014</string>
    <string name="info_page_bv_location">Россия, Москва</string>
    <string name="info_page_bv_peoples">> 80 чел.</string>
    <string name="info_page_bv_site">скоро</string>
    <string name="info_page_bv_intagram">/blackvelvetteam</string>
    <string name="info_page_bv_vk">/blackvelvetteam</string>
    <string name="info_page_bv_youtube">/blackvelvetteam</string>
    <string name="info_page_cd">CRAZY DREAM</string>
    <string name="info_page_cd_since">Since 2004</string>
    <string name="info_page_cd_location">Россия, Москва</string>
    <string name="info_page_cd_peoples">> 500 чел.</string>
    <string name="info_page_cd_site">/crazydreamdancefamily.com</string>
    <string name="info_page_cd_intagram">/crazydream_msk</string>
    <string name="info_page_cd_vk">/crazy_dream_official</string>
    <string name="info_page_cd_youtube">/qwerty</string>
    <string name="info_page_dfl">DANCE FAMILY LADIES</string>
    <string name="info_page_dfl_since">Since 2009</string>
    <string name="info_page_dfl_location">Россия, Москва</string>
    <string name="info_page_dfl_peoples">> 10 чел.</string>
    <string name="info_page_dfl_site">скоро</string>
    <string name="info_page_dfl_intagram">скоро</string>
    <string name="info_page_dfl_vk">/df_ladystyle</string>
    <string name="info_page_dfl_youtube"></string>
    <string name="info_page_fl">FLASH LIGHT</string>
    <string name="info_page_fl_since">Since 2010</string>
    <string name="info_page_fl_location">Россия, Горячий Ключ</string>
    <string name="info_page_fl_peoples">> 50 чел.</string>
    <string name="info_page_fl_site">скоро</string>
    <string name="info_page_fl_intagram">/flash_light_fam</string>
    <string name="info_page_fl_vk">/flashlightfam</string>
    <string name="info_page_fl_youtube"></string>
    <string name="info_page_fs">Free Steps</string>
    <string name="info_page_fs_since">Since 2008</string>
    <string name="info_page_fs_location">Россия, Москва</string>
    <string name="info_page_fs_peoples">> 60 чел.</string>
    <string name="info_page_fs_site">скоро</string>
    <string name="info_page_fs_intagram">/ds_freesteps</string>
    <string name="info_page_fs_vk">/freestepskids</string>
    <string name="info_page_fs_youtube"></string>
    <string name="info_page_jd">Just Dance</string>
    <string name="info_page_jd_since">Since 2013</string>
    <string name="info_page_jd_location">Россия, Ставрополь</string>
    <string name="info_page_jd_peoples">> 60 чел.</string>
    <string name="info_page_jd_site">скоро</string>
    <string name="info_page_jd_intagram">/justdancestav</string>
    <string name="info_page_jd_vk">/jdstav</string>
    <string name="info_page_jd_youtube"></string>
    <string name="info_page_ld">Leader Dance</string>
    <string name="info_page_ld_since">Since 2009</string>
    <string name="info_page_ld_location">Россия, Астрахань</string>
    <string name="info_page_ld_peoples">> 230 чел.</string>
    <string name="info_page_ld_site">/leader-dance.ru</string>
    <string name="info_page_ld_intagram">/leader.dance</string>
    <string name="info_page_ld_vk">/leaderd</string>
    <string name="info_page_ld_youtube">/goo.gl/sgz9N4</string>
    <string name="info_page_lj">Lucky Jam</string>
    <string name="info_page_lj_since">Since 2010</string>
    <string name="info_page_lj_location">Россия, Ставрополь</string>
    <string name="info_page_lj_peoples">> 70 чел.</string>
    <string name="info_page_lj_site">/luckyjam.ru</string>
    <string name="info_page_lj_intagram">/lucky_jam_stav</string>
    <string name="info_page_lj_vk">/club16550057</string>
    <string name="info_page_lj_youtube"></string>
    <string name="info_page_mc">My Community</string>
    <string name="info_page_mc_since">Since 2005</string>
    <string name="info_page_mc_location">Россия, Ростов</string>
    <string name="info_page_mc_peoples">> 100 чел.</string>
    <string name="info_page_mc_site">/mycom.plp7.ru</string>
    <string name="info_page_mc_intagram">/mycomdance/</string>
    <string name="info_page_mc_vk">/mycommunity_dance</string>
    <string name="info_page_mc_youtube"></string>
    <string name="info_page_u">Unistream</string>
    <string name="info_page_u_since">Since 2006</string>
    <string name="info_page_u_location">Россия, Ростов-на-Дону</string>
    <string name="info_page_u_peoples">> 170 чел.</string>
    <string name="info_page_u_site">скоро</string>
    <string name="info_page_u_intagram">/unistream_dance</string>
    <string name="info_page_u_vk">/usmdance</string>
    <string name="info_page_u_youtube">/JT5fyTQ_wos</string>
    <string name="clubs_toolbar_title">DANCE FAMILY</string>
    <string name="clubs_toolbar_subtitle">CLUBS</string>
    <string name="play_toolbar_title">SONG</string>
    <string name="play_toolbar_subtitle">NOW PLAYING</string>
    <string name="studio_toolbar_title">RxProject</string>
    <string name="studio_toolbar_subtitle">CONTACTS</string>
    <string name="studio_support_title">МЫ ВСЕГДА НА СВЯЗИ!</string>
    <string name="studio_support_title2">Мы всегда на связи!</string>
    <string name="studio_support">СЛУЖБА ПОДДЕРЖКИ</string>
    <string name="studio_support1_2">Служба поддержки</string>
    <string name="studio_support_url">support.android@rxproject.ru</string>
    <string name="studio_support2">СОТРУДНИЧЕСТВО</string>
    <string name="studio_support2_2">Сотрудничество</string>
    <string name="studio_support2_url">info@rxproject.ru</string>
    <string name="studio_support_vk">СООБЩЕСТВО VK</string>
    <string name="studio_support_vk2">Сообщество VK</string>
    <string name="studio_support_vk_url">vk.com/rxproject_studio</string>
    <string name="support_project_toolbar_title">PROJECT</string>
    <string name="support_project_toolbar_subtitle">SUPPORT</string>
    <string name="support_project_main_text">ДРУЗЬЯ, ПОЖАЛУЙСТА,\nПОДДЕРЖИТЕ НАШИ ПРОЕКТЫ!\nВМЕСТЕ
        МЫ СДЕЛАЕМ МИР\nЧУТОЧКУ ЛУЧШЕ И ИНТЕРЕСНЕЕ!
    </string>
    <string name="support_project_card_sber">КАРТА СБЕРБАНК</string>
    <string name="support_project_card_sber_number">4276 4000 6194 2877</string>
    <string name="support_project_yandex_money">ЯНДЕКС.ДЕНЬГИ</string>
    <string name="support_project_yandex_money_number">410 015 079 982 251</string>
    <string name="support_project_paypal">PayPal</string>
    <string name="support_project_paypal_number">paypal.me/HILKstudio</string>
    <string name="support_project_qiwi">QIWI КОШЕЛЕК</string>
    <string name="support_project_qiwi_number">+7 916 901 60 17</string>
    <string name="admob_app_id">ca-app-pub-6263456605318646~9593782010</string>
    <string-array name="interstitial_ad_unit_id_array">
        <item>ca-app-pub-6263456605318646/5730694015</item>
        <item>ca-app-pub-6263456605318646/7207427218</item>
        <item>ca-app-pub-6263456605318646/8684160410</item>
        <item>ca-app-pub-6263456605318646/1160893616</item>
        <item>ca-app-pub-6263456605318646/2637626812</item>
        <item>ca-app-pub-6263456605318646/4114360016</item>
        <item>ca-app-pub-6263456605318646/7067826414</item>
    </string-array>
    <string name="banner_ad_unit_id">ca-app-pub-6263456605318646/9602490410</string>
    <string-array name="clubs">
        <item>BLACK VELVET</item>
        <item>CRAZY DREAM</item>
        <item>DANCE FAMILY LADIES</item>
        <item>FLASH LIGHT</item>
        <item>FREE STEPS</item>
        <item>JUST DANCE</item>
        <item>Leader Dance</item>
        <item>LUCKY JAM</item>
        <item>MY COMMUNITY</item>
        <item>UNISTREAM</item>
    </string-array>
    <string name="link_to_app">
        https://play.google.com/store/apps/details?id=com.wiretech.df.dfmusic
    </string>
    <string name="text_description_action">Поделиться</string>
    <string name="text_for_share_1">
        Включай быстрее Dance Family music, ждем только тебя!
    </string>
    <string name="text_for_share_studio">
        Мне нравится RxProject!\n\nRxProject В VK\nhttps://vk.com/rxproject_studio\n\nСотрудничество
        с
        RxProject\ninfo@rxproject.ru\n\nСлужба поддержки
        RxProject\nsupport.android@rxproject.ru\n\nСкачай DF
        Music прямо сейчас
    </string>
    <string name="text_for_share_support">
        Я поддерживаю проект DF Music от RxProject, поддержи и ты!\n\nКарта Сбербанка\n4276 4000
        6194
        2877\n\nЯндекс.Деньги\nhttps://money.yandex.ru/to/410015079982251\n\nPayPal\npaypal.me/HILKstudio\n\nQIWI
        Кошелек\n+79169016017\n\nСкачай DF Music прямо сейчас
    </string>
    <string name="text_for_share_for_clubs">
        Все клубы Dance Family в одном приложении!\nСкачай DF Music прямо сейчас
    </string>
    <string name="text_for_share_for_friends">
        Включай быстрее Dance Family Music, ждем только тебя!\nТеперь все клубы DF всегда с
        тобой!\nСкачай DF Music прямо сейчас
    </string>
    <string-array name="temp_songs_ids">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string-array name="temp_songs_names">
        <item>SONGNAME1</item>
        <item>SONGNAME2</item>
        <item>SONGNAME3</item>
        <item>SONGNAMEaergserhasergsergeasrhaserg4</item>
        <item>SONGNAME5 sd dfgwe sdgfwe sge sdgwr et</item>
        <item>SONGNAME1</item>
        <item>SONGNAME2</item>
        <item>SONGNAME3</item>
        <item>SONGNAMEaergserhasergsergeasrhaserg4</item>
        <item>SONGNAME5 sd dfgwe sdgfwe sge sdgwr et</item>
        <item>SONGNAME1</item>
        <item>SONGNAME2</item>
        <item>SONGNAME3</item>
        <item>SONGNAMEaergserhasergsergeasrhaserg4</item>
        <item>SONGNAME5 sd dfgwe sdgfwe sge sdgwr et</item>
    </string-array>
    <string-array name="temp_songs_lengths">
        <item>136</item>
        <item>136</item>
        <item>121</item>
        <item>1</item>
        <item>136</item>
        <item>136</item>
        <item>136</item>
        <item>136</item>
        <item>136</item>
        <item>136</item>
        <item>136</item>
        <item>136</item>
        <item>600</item>
        <item>12335</item>
        <item>178465</item>
    </string-array>
</resources>