<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainCoordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_hilk"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/rlBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_backward_toolbar" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space_between_titles_in_toolbar"
                android:text="@string/support_project_toolbar_title"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_title_toolbar"
                android:textStyle="normal|bold" />


            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:text="@string/support_project_toolbar_subtitle"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_subtitle_toolbar" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlShare"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_background"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_share_all" />

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/rocket"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_project_main_text"
                android:textAlignment="center"
                android:textColor="@color/textColorPrimary"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_marginBottom="28dp"/>

            <TextView
                android:text="@string/support_project_card_sber"
                style="@style/support_first_text"/>

        <TextView
            android:text="@string/support_project_card_sber_number"
            style="@style/support_second_text"/>

        <TextView
            android:text="@string/support_project_yandex_money"
            style="@style/support_first_text"/>

        <TextView
            android:text="@string/support_project_yandex_money_number"
            style="@style/support_second_text"/>

        <TextView
            android:text="@string/support_project_paypal"
            style="@style/support_first_text"/>

        <TextView
            android:text="@string/support_project_paypal_number"
            style="@style/support_second_text"/>

        <TextView
            android:text="@string/support_project_qiwi"
            style="@style/support_first_text"/>

        <TextView
            android:text="@string/support_project_qiwi_number"
            style="@style/support_second_text"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
