<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainCoordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_hilk"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/rlBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_backward_toolbar" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space_between_titles_in_toolbar"
                android:text="@string/studio_toolbar_title"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_title_toolbar"
                android:textStyle="normal|bold" />


            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:text="@string/studio_toolbar_subtitle"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_subtitle_toolbar" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlShare"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_background"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_share_all" />

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/hilk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="28dp"
                android:text="@string/studio_support_title"
                android:textColor="@color/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                style="@style/studio_first_text"
                android:text="@string/studio_support" />

            <TextView
                style="@style/studio_second_text"
                android:text="@string/studio_support_url" />

            <TextView
                style="@style/studio_first_text"
                android:text="@string/studio_support2" />

            <TextView
                style="@style/studio_second_text"
                android:text="@string/studio_support2_url" />

            <TextView
                style="@style/studio_first_text"
                android:text="@string/studio_support_vk" />

            <TextView
                style="@style/studio_second_text"
                android:text="@string/studio_support_vk_url" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
