<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainCoordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tempbackscreen"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/rlBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_backward_toolbar" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menu_toolbar_title"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_title_toolbar"
                android:textStyle="normal|bold" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/menu_item"
            android:id="@+id/rlShare">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_share_all"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_share"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_menu_items"
                android:layout_marginLeft="72dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/menu_item"
            android:id="@+id/tlAbout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_info_menu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_about"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_menu_items"
                android:layout_marginLeft="72dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/menu_item"
            android:id="@+id/rlSavedAudio">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_save_menu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_save_audio"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_menu_items"
                android:layout_marginLeft="72dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/menu_item"
            android:id="@+id/rlRating">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_rating_menu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_star"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_menu_items"
                android:layout_marginLeft="72dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/menu_item"
            android:id="@+id/rlDonate">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_money_menu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_donate"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_menu_items"
                android:layout_marginLeft="72dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/menu_item"
            android:id="@+id/rlWrite">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_email_menu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_write"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_menu_items"
                android:layout_marginLeft="72dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

